--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,5 +18,11 @@ jobs:
         with:
           release-type: simple
           token: ${{ secrets.TOKEN }}
+          changelog-types: |
+            [
+              {"type":"feat","section":"✨ Новые возможности","hidden":false},
+              {"type":"fix","section":"🐞 Исправления","hidden":false},
+              {"type":"docs","section":"📝 Документация","hidden":false}
+            ]
       - run: |
           echo "${{ toJSON(steps.q.outputs) }}"
