fix: fix name step

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -19,4 +19,4 @@ jobs:
           release-type: simple
           token: ${{ secrets.TOKEN }}
       - run: |
-          echo "${{steps.q.outputs.version}}"
+          echo "${{steps.release.outputs.version}}"
