--- a/release-please-config.json
+++ b/release-please-config.json
@@ -1,7 +1,7 @@
 {
   "packages": {
     ".": {
-      "release-type": "node",
+      "release-type": "simple",
       "changelog-sections": [
         { "type": "feat", "section": "✨ Новые возможности", "hidden": false },
         { "type": "fix", "section": "🐞 Исправления", "hidden": false },
