ci: Fix formatting in release-please-config.json

--- a/release-please-config.json
+++ b/release-please-config.json
@@ -9,7 +9,7 @@
         {"type": "revert", "section": "Отмена нововведения/исправления", "hidden": false},
         {"type": "chore", "section": "Прочее", "hidden": true},
         {"type": "test", "section": "Тесты", "hidden": true},
-        {"type": "ci", "section": "CI", "hidden": true},
+        {"type": "ci", "section": "CI", "hidden": true}
       ],
       "pull-request-title-pattern": "Релиз: v${version}",
       "pull-request-header": "🤖 Автоматический релиз, созданный Release Please",
