--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,11 +22,13 @@ jobs:
           token: ${{ secrets.TOKEN }}
   release:
     runs-on: ubuntu-latest
+    needs: release-please
     if: ${{ needs.release-please.outputs.release == true }}
     steps:
       - run: echo "isRelease"
   request:
     runs-on: ubuntu-latest
+    needs: release-please
     if: ${{ needs.release-please.outputs.request == true }}
     steps:
       - run: echo "isRequest"
