--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -23,12 +23,12 @@ jobs:
   release:
     runs-on: ubuntu-latest
     needs: release-please
-    if: ${{ needs.release-please.outputs.release == true }}
+    if: ${{ needs.release-please.outputs.release == "true" }}
     steps:
       - run: echo "isRelease"
   request:
     runs-on: ubuntu-latest
     needs: release-please
-    if: ${{ needs.release-please.outputs.request == true }}
+    if: ${{ needs.release-please.outputs.request == "true" }}
     steps:
       - run: echo "isRequest"
